- fix background image bug on heroku

--- a/app/assets/stylesheets/login_page.scss
+++ b/app/assets/stylesheets/login_page.scss
@@ -1,7 +1,7 @@
 #main-login {
   flex: 1;
   background: linear-gradient(rgba(0, 0, 0, 0.66), rgba(0, 0, 0, 0.66)),
-    url("login.jpg") center/cover;
+    asset-url("login.jpg") center/cover;
 
   .container-fluid {
     padding: 0;
