--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,10 @@
 =end%>
     <%= yield %>
     <%= render 'layouts/footer' %>
-    <%= debug(params) if Rails.env.development? %>
+    <%
+=begin%>
+ <%= debug(params) if Rails.env.development? %> 
+<%
+=end%>
   </body>
 </html>
