--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div id="main-signup">
   <div class="container-fluid">
     <div class="row">
-      <h2 align="center"> Sign up for free to start sharing <br> your inspiration and story on authors haven</h2>
+      <h2 align="center"> Sign up for free to start sharing <br> your inspiration and story on youBlog</h2>
       <div class="signup-form">
         <%= render  "form" %>
         <div class="signup-actions">
