--- a/app/assets/stylesheets/bloggers.scss
+++ b/app/assets/stylesheets/bloggers.scss
@@ -1,4 +1,5 @@
 #main-bloggers-listing {
+  background-color: #f5f9fd;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -15,11 +16,11 @@
 
       h2 {
         margin: 0;
-        color: #263238;
+        color: #434e55;
       }
 
       .seperator {
-        background: #263238;
+        background: #434e55;
         width: 100px;
         height: 2px;
         margin: 0 0 1rem;
@@ -49,13 +50,13 @@
             position: relative;
             padding: 24px 28px 32px;
             background: #fff;
-            box-shadow: 0px 10px 50px 0px rgba(80, 89, 97, 0.2);
+            box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.15);
             border: 1px solid #eaeaea;
             border-radius: 4px;
             outline: none;
             font-family: "Montserrat", sans-serif;
             font-size: 12px;
-            color: #263238;
+            color: #434e55;
 
             .blogger__image {
               text-align: center;
@@ -66,6 +67,7 @@
             }
 
             p {
+              font-family: "Josefin Sans", sans-serif;
               font-size: 18px;
               letter-spacing: 1px;
               text-align: center;
@@ -73,9 +75,10 @@
             }
 
             .blogger__articles {
-              font-size: 11px;
+              font-size: 12px;
               text-align: center;
               margin: 5px 0;
+              color: #ff7a00;
             }
           }
         }
