--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,4 +1,5 @@
 #main-category-listing {
+  background-color: #f5f9fd;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -16,12 +17,12 @@
 
       h2 {
         margin: 0;
-        color: #263238;
+        color: #434e55;
         font-size: 24px;
       }
 
       .seperator {
-        background: #263238;
+        background: #434e55;
         width: 100px;
         height: 2px;
         margin: 0 0 1rem;
@@ -74,12 +75,12 @@
             position: relative;
             padding: 24px 28px 32px;
             background: #fff;
-            box-shadow: 0px 10px 50px 0px rgba(80, 89, 97, 0.2);
+            box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.15);
             border: 1px solid #eaeaea;
             font-family: "Montserrat", sans-serif;
             font-size: 12px;
             text-transform: uppercase;
-            color: #263238;
+            color: #434e55;
 
             h4 {
               font-size: 18px;
@@ -87,7 +88,8 @@
             }
 
             .category-articles {
-              font-size: 11px;
+              font-size: 12px;
+              color: #f2711c;
             }
           }
         }
