--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -16,12 +16,12 @@
           <% end %>
         </div>
         <div class="article-actions">
-          <span><%= link_to "READ MORE", article_path(article) %></span>
+          <span><%= link_to "READ MORE", article_path(article), class: "readmore-action" %></span>
           <span>
             <% if logged_in? && (current_user == article.user || current_user.admin?) %>
-              <%= link_to "Edit", edit_article_path(article) %>
+              <%= link_to '<i class="far fa-edit"></i>'.html_safe, edit_article_path(article) %>
               |
-              <%= link_to "Delete", article_path(article), method: :delete,
+              <%= link_to '<i class="far fa-trash-alt"></i>'.html_safe, article_path(article), method: :delete,
                 data: {confirm: "Are you sure you want to delete?"} %>
             <% end %>
           </span>
