--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,221 +4,6 @@
 @import "bootstrap";
 @import url("https://fonts.googleapis.com/css?family=Berkshire+Swash|Josefin+Sans:400,700|Montserrat|Sofia&display=swap");
 
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  font-family: "Josefin Sans", sans-serif;
-  color: #434e55;
-}
-
-.navbar-default {
-  position: absolute;
-  background-color: transparent;
-  border-color: transparent;
-  margin: 0;
-
-  #auth-container {
-    width: 100%;
-    margin: 0 auto;
-    position: fixed;
-    top: 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    .navbar-brand {
-      color: #ffffff;
-      font-family: "Berkshire Swash", cursive;
-      font-size: 24px;
-    }
-
-    span {
-      background-color: #fff;
-      padding: 0.5rem 2rem;
-      border-radius: 3px;
-      font-size: 1rem;
-      margin-left: 50%;
-
-      &:hover {
-        background: #ff7a00;
-
-        a {
-          color: #ffffff;
-          text-decoration: none;
-        }
-      }
-
-      a {
-        color: #000000;
-        font-size: 15px;
-        font-weight: bold;
-      }
-    }
-  }
-
-  #pages-container {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #ffffff;
-    box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.25);
-    z-index: 1000;
-
-    .navbar-brand {
-      color: #434e55;
-      font-family: "Berkshire Swash", cursive;
-      font-size: 24px;
-    }
-
-    .collapse {
-      margin-left: 35%;
-      display: flex !important;
-
-      .navbar-search-bar {
-        padding-left: 0;
-        padding-right: 0;
-        margin: 10px auto 8px;
-        display: flex;
-
-        input[type="text"] {
-          border: 1px solid #546e7a;
-          border-radius: 4px;
-          padding: 4px 8px;
-        }
-
-        button[type="submit"] {
-          border: none;
-
-          .fa-search {
-            color: #434e55;
-            font-size: 16px;
-          }
-        }
-      }
-
-      .navbar-nav {
-        li {
-          a {
-            i {
-              color: #434e55;
-              font-size: 18px;
-            }
-          }
-
-          .fa-user-shield, .fa-user, .caret {
-            color: #ff7a00;
-          }
-
-          .dropdown-menu {
-            box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.25);
-            border: 1px solid rgba(34, 36, 38, 0.15);
-            border-radius: 4px;
-            min-width: max-content;
-            padding: 5px 0 0;
-
-            li {
-              a {
-                padding: 8px 16px;
-              }
-            }
-
-            .divider {
-              margin: 0;
-            }
-          }
-        }
-
-        .bloggers__link,
-        .categories__link,
-        .login__link,
-        .signup__link {
-          color: #434e55;
-          font-size: 16px;
-        }
-      }
-    }
-  }
-}
-
-.btn-lg {
-  font-size: 1.4em;
-  background-color: black;
-}
-
-.listing {
-  list-style: none;
-  padding-left: 10px;
-}
-
-footer {
-  background-color: #001935;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  margin: 0;
-  padding: 0;
-
-  .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0;
-    width: 100%;
-
-    .footer-link {
-      color: #ffffff;
-      display: grid;
-      grid-template-columns: 45% auto 45%;
-      grid-gap: 8px;
-      margin-top: 8px;
-      align-items: center;
-      justify-items: center;
-
-      a {
-        color: #ffffff;
-        font-size: 18px;
-        font-weight: bold;
-      }
-
-      p {
-        color: #ffffff;
-        font-size: 1rem;
-        padding: 0 1rem;
-        grid-column: span 3;
-      }
-    }
-
-    .social-link {
-      margin-left: 40%;
-      display: flex;
-
-      a {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        width: 35px;
-        height: 35px;
-        font-size: 20px;
-        color: #ffffff;
-        margin: 0 8px;
-
-        &:hover {
-          text-decoration: none;
-          transform: scale(1.3);
-          transition: all 0.2s ease-in-out;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 48rem) {
-  .navbar-toggle {
-    display: none;
-  }
-}
+// @import "variables";
+@import "base";
+@import "layout";
