- add new category modal - style the modal

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,8 +5,15 @@
       <div class="seperator"></div>
     </div>
     <% if logged_in? and current_user.admin? %>
-        <div class="new-category"><%= link_to "Create", new_category_path %></div>
-      <% end %>
+        <div class="new-category">
+          <span class="new-category__btn">Create</span>
+          <%
+=begin%>
+ <%= link_to "Create", new_category_path %> 
+<%
+=end%>
+        </div>
+    <% end %>
     <div class="category__listing">
       <% @categories.each do |category| %>
         <div class="category-wrapper">
@@ -24,3 +31,5 @@
     <%= will_paginate %>
   </div>
 </div>
+
+<%= render "new" %> 
