--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -35,10 +35,11 @@
       top: 24px;
       right: 48px;
 
-      a {
+      .new-category__btn {
         text-decoration: none;
         outline: none;
         background: #fff;
+        cursor: pointer;
         color: #f2711c;
         padding: 8px 16px;
         border: 1px solid #f2711c;
@@ -96,6 +97,95 @@
       }
     }
   }
+}
+
+#create-new-category-modal {
+  display: none;
+  z-index: 1010;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 480px;
+  max-width: 100%;
+  height: 240px;
+  max-height: 100%;
+
+
+  .new-category-modal-content {
+    border-radius: 8px;
+    text-align: center;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    padding: 24px 12px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+
+    #new-category-close {
+      float: right;
+      cursor: pointer;
+      min-width: 18px;
+      min-height: 18px;
+      background: url("close.svg") no-repeat;
+    }
+
+    .new-category-header {
+      font-size: 28px;
+      line-height: 26px;
+      padding-bottom: 12px;
+    }
+
+    .category-form-content {
+      .category-form {
+        .category-name {
+          width: 90%;
+          outline: none;
+          margin: 1rem 0;
+          padding: 1rem;
+          background: #ffffff;
+          border: 1px solid #ff7a00;
+          box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.25);
+          border-radius: 5px;
+        }
+
+        .category-form__actions {
+          text-align: right;
+          margin: 16px 24px 16px 48px;
+          color: #ff7a00;
+
+          .save-button {
+            border: 1px solid #ff7a00;
+            border-radius: 8px;
+            padding: 6px 18px 5px;
+            background: #fff;
+
+            &:hover {
+              padding: 8px 20px 6px;
+              color: #fff;
+              background: #f2711c;
+            }
+          }
+        }
+      }
+    }
+
+  }
+}
+
+.new-category-modal-overlay {
+  display: none;
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
 }
 
 @media (min-width: 432px) {
