--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,17 +1,9 @@
-<%= render 'shared/errors', obj: @category %>
+<%= render 'shared/errors', obj: @category unless @category.nil? %>
 
-<%= form_for(@category, :html => {class: "form-horizontal", role: "form"}) do |f| %>
-  <div class="form-group">
-    <div class="control-label col-sm-3">
-     <%= f.label :name %>
-    </div>
-    <div class="col-sm-6">
-      <%= f.text_field :name, class: "form-control", placeholder: "Category name", autofocus: true %>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-3 col-sm-10">
-      <%= f.submit class: "btn btn-primary btn-lg" %>
-    </div>
+<%= form_for(@category || "", :html => {class: "category-form", role: "form"}) do |f| %>
+  <%= f.text_field :name, class: "category-name", placeholder: "Category name" %>
+
+  <div class="category-form__actions">
+    <%= f.submit class: "save-button" %>
   </div>
 <% end %>
