- add edit category modal - style the modal

--- a/app/views/categories/_new.html.erb
+++ b/app/views/categories/_new.html.erb
@@ -12,4 +12,4 @@
   </div>
 </div>
 
-<div class="new-category-modal-overlay" id="modal-overlay"></div>
+<div class="category-modal-overlay" id="modal-overlay"></div>
