--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -99,7 +99,8 @@
   }
 }
 
-#create-new-category-modal {
+#create-new-category-modal,
+#edit-category-modal {
   display: none;
   z-index: 1010;
   position: fixed;
@@ -108,11 +109,11 @@
   transform: translate(-50%, -50%);
   width: 480px;
   max-width: 100%;
-  height: 240px;
+  height: 230px;
   max-height: 100%;
 
-
-  .new-category-modal-content {
+  .new-category-modal-content,
+  .edit-category-modal-content {
     border-radius: 8px;
     text-align: center;
     background-color: #ffffff;
@@ -126,7 +127,8 @@
     height: 100%;
     overflow: auto;
 
-    #new-category-close {
+    #new-category-close,
+    #edit-category-close {
       float: right;
       cursor: pointer;
       min-width: 18px;
@@ -134,7 +136,8 @@
       background: url("close.svg") no-repeat;
     }
 
-    .new-category-header {
+    .new-category-header,
+    .edit-category-header {
       font-size: 28px;
       line-height: 26px;
       padding-bottom: 12px;
@@ -177,7 +180,7 @@
   }
 }
 
-.new-category-modal-overlay {
+.category-modal-overlay {
   display: none;
   z-index: 1000;
   position: fixed;
@@ -186,6 +189,12 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
+}
+
+.edit-item-category {
+  .edit-category__btn {
+    cursor: pointer;
+  }
 }
 
 @media (min-width: 432px) {
