- restyle the show category-articles page - refactor the categories stylesheet

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -3,5 +3,5 @@ body {
   flex-direction: column;
   min-height: 100vh;
   font-family: "Josefin Sans", sans-serif;
-  // color: $color-primary-dark;
+  // color: $color-grey;
 }
