--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   flex-direction: column;
   flex: 1;
-  padding: 90px 220px 0;
+  padding: 90px 220px 40px;
 
   .container-wrapper {
     .articles-listing-textbox {
