--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,7 +1,11 @@
 /* Colors */
-$color-primary-dark: #434e55;
+$color-grey: #434e55;
+$color-light-grey: #eaeaea;
 $color-white: #ffffff;
+$color-whitesmoke: #f5f5f5;
+$color-dark-white: #f5f9fd;
 $color-black: #000000;
 $color-black-primary: #001935;
 $color-black-secondary: #222426;
-$color-primary-orange: #ff7a00 ;
+$color-orange-first: #ff7a00;
+$color-orange-second: #f2711c;
