--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,6 +1,7 @@
 /* Colors */
 $color-grey: #434e55;
 $color-light-grey: #eaeaea;
+$color-dark-grey: #bbb;
 $color-white: #ffffff;
 $color-whitesmoke: #f5f5f5;
 $color-dark-white: #f5f9fd;
