--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,1 +1,3 @@
-<span class="item-category"><%= link_to  category.name, category_path(category) %></span>
+<span class="item-category">
+  <%= link_to  category.name, category_path(category) %>
+</span>
