--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,41 +1,40 @@
 <%= render 'shared/errors', obj: @user %>
 
-<div class='row'>
-  <div class='col-xs-12'>
-    <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
-      <div class="form-group">
-        <div class="col-sm-6">
-          <span class="fas fa-user"></span>
-          <%= f.text_field :username, class: "form-control", placeholder: "Username", autofocus: true %>
-        </div>
+<div>
+  <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+    <div class="form-group">
+      <div class="col-sm-6">
+        <span class="fas fa-user"></span>
+        <%= f.text_field :username, class: "form-control", placeholder: "Username", autofocus: true %>
       </div>
-      <div class="form-group">
-        <div class="col-sm-6">
-          <span class="fas fa-envelope"></span>
-          <%= f.email_field :email, class: "form-control", placeholder: "Email Address" %>
-        </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-6">
+        <span class="fas fa-envelope"></span>
+        <%= f.email_field :email, class: "form-control", placeholder: "Email Address" %>
       </div>
+    </div>
+    
+    <div class="form-group">
+      <div class="col-sm-6">
+        <span class="fas fa-lock"></span>
+        <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+      </div>
+    </div>
 
-      <% if logged_in? && current_page?(edit_user_path(current_user)) %>
-        <div class="form-group">
-          <div class="col-sm-6">
-            <span class="fas fa-pencil-alt"></span>
-            <%= f.text_area :biography, class: "form-control", placeholder: "Tell us about yourself..." %>
-          </div>
-        </div>
-      <% end %>
-     
+    <% unless current_page?(signup_path) %>
       <div class="form-group">
         <div class="col-sm-6">
-          <span class="fas fa-lock"></span>
-          <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-6">
-          <%= f.submit(@user.new_record? ? "Sign up" : "Update", class: "btn btn-primary btn-lg") %>
+          <span class="fas fa-pencil-alt"></span>
+          <%= f.text_area :biography, class: "form-control form-textarea", placeholder: "Tell us about yourself..." %>
         </div>
       </div>
     <% end %>
-  </div>
+
+    <div class="form-group">
+      <div class="col-sm-6">
+        <%= f.submit(@user.new_record? ? "Sign up" : "Update", class: "btn btn-primary btn-lg") %>
+      </div>
+    </div>
+  <% end %>
 </div>
