--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,12 +6,12 @@
           <%= gravatar_for @user, size:150 %>
         </div>
         <div class="profile-info__content">
-          <h2><%= @user.username.capitalize %>'s page</h2>
+          <h2 class="user-name"><%= @user.username.capitalize %>'s page</h2>
           <small class="user-email"><%= @user.email %></small>
           <p class="user-bio"><%= @user.biography.capitalize if @user.biography %></p>
           <div>
             <% if current_user == @user %>
-              <%= link_to "Edit Profile", edit_user_path(current_user), class: "profile-info__action", type: "button" %>
+              <span class="profile-info__action edit-btn" type="button">Edit Profile</span>
             <% else %>
               <a href="#" class="profile-info__action" type="button">Follow</a>
               <%  if logged_in? && current_user.admin? %>
@@ -53,6 +53,7 @@
       </div>
       <div align="center"><%= will_paginate @user_articles %></div>
     </div>
+
     <div class="main-followers">
       <% if current_user == @user %>
         <p>You have no followers yet :,(</p>
@@ -71,4 +72,4 @@
   </div>
 </div>
 
-
+<%= render  "edit" %>
